<resources>
    <string name="app_name">MTG Arena Set Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="set_image">Set image</string>
    <string name="content_desc_set_image">Set Image</string>
    <string name="setTitleSet">setTitleSet</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="action_2">action1</string>
    <string name="action_1">action1</string>
    <string name="add">ADD</string>
    <string name="setname">SetName</string>
    <string name="totalcards">Total:</string>
    <string name="_0">0</string>
    <string name="separator">/</string>
    <string name="_100">100</string>
    <string name="uncommon">Uncommon:</string>
    <string name="rares">Rares:</string>
    <string name="mythics">Mythics:</string>
    <string name="common">Common:</string>
    <string name="deleteSet">Delete Set</string>
    <string name="deleteConfirm">Are you sure you want to delete your set?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="setIncluded">Set included.</string>
    <string name="setDeleted">Set deleted.</string>
    <string name="add_card">ADD CARD</string>
</resources>